public/styles/_layout.scss
.body {
	background-color: white;
	max-width: $max-page-width;
	margin: auto;
}
.container-fluid {
	max-width: $max-page-width;
	margin: auto;
	@include media-breakpoint-up( sm ){
		padding: 0 $grid-gutter-width;
	}
}

// Applies CSS Grid for layout w/sidebar

.has-nav-section {
	.nav-section {
		display: none;
	}
	@include media-breakpoint-up(xl){
		display: grid;
		padding-left: 0;
		grid-template-columns: 230px minmax(0,1fr);
		grid-template-areas: 'sidebar breadcrumb' 'sidebar mainbody';
		//grid-gap: $grid-gutter-width/2;
		
		& > *:not(.nav-section) {
			padding-left: $grid-gutter-width;
		}
		
		.nav-section {
			display: block;
			grid-area: sidebar;
			//border-right: 1px solid $border-color;
			//padding-right: $grid-gutter-width/2;
		}
		
		.nav--breadcrumb {
			grid-area: breadcrumb;
		}
		
		.content-main {
			grid-area: mainbody;
		}
	}
	
	
	@include media-breakpoint-down(sm){
		.nav-section {
			border-bottom: 1px solid $gray-300;
			padding-bottom: $grid-gutter-width/2;
			margin-bottom: $grid-gutter-width/2;
		}
	}
}

footer {
	margin-top: $grid-gutter-width*2;
}

header {
	background-color: white;
}

